<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.moneyforward.ui.githubUserList.GitHubUserListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/input_github_users"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:background="@color/cardview_shadow_end_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/search"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            style="@style/Widget.MaterialComponents.Button"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSearch"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/list_of_user"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>